syntax = "proto3";

package protocol;

option go_package = "./controller_connection";

message ControllerConnection {
  string worker_name = 1;
  string client_id = 2;
  bool finished = 3;
}
